@@ -162,7 +162,7 @@ enum SMPP_ERROR_MESSAGES {
     SMPP_ESME_RINVCMDLEN = 0x00000002,
     SMPP_ESME_RINVCMDID = 0x00000003,
     SMPP_ESME_RINVBNDSTS = 0x00000004,
-    SMPP_ESME_RALYNBD = 0x00000005,
+    SMPP_ESME_RALYBND = 0x00000005,
     SMPP_ESME_RINVPRTFLG = 0x00000006,
     SMPP_ESME_RINVREGDLVFLG = 0x00000007,
     SMPP_ESME_RSYSERR = 0x00000008,
