@@ -1,4 +1,8 @@
 2014-10-13 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c: fixed error code
+      SMPP_ESME_RALYNBD -> SMPP_ESME_RALYBND.
+
+2014-10-13 Alexander Malysh <amalysh at kannel.org>
     * gwlib/conn.c: added more vorvose SSL error.
       Thanks to Artem Pylypchuk <articice at ua.fm> for this patch.
 
